[package]
name = "domaincolor"
version = "1.0.0"
authors = ["Paul Modlin <paulmodlin@vivaldi.net"]

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
domain-coloring = { git = "https://github.com/pmodl/rust-domain-coloring", branch = "master" }
num-complex = "0.1.*"
regex = "1.*"
lazy_static = "1.*"
structopt = "0.2"
dc-utils = { path = "dc-utils"}
